--- a/index.html
+++ b/index.html
@@ -462,19 +462,9 @@
             </div>
             <div class="body">
                 <div class="ele-1"></div>
-                BITS, Pilani, India is back with the 39th edition of APOGEE(A
-                Professions Oriented Gathering over Educational Experiences)- the
-                institute’s annual technical extravaganza, from 20th to 21st March
-                2021, this time as The Digitized Renaissance! A melange of technology,
-                innovation and inspiration across space and time of humankind, this
-                technical conference will, as always, play host to the brightest minds
-                and thinkers in the country and world. From presenting papers and
-                projects at the oldest-of-its-kind events in the country, developing
-                amazing solutions to real-life cases and problems, exhibitions of the
-                best contraptions that man has made, guest lectures that tell stories
-                never heard before, to the college’s own literature festival, APOGEE
-                challenges the intellect of the participants and piques the minds of
-                the audience.
+                AWH Engineering College (AWHEC), established in 2001, is a premier self-financing engineering institution in Kozhikode, Kerala. Managed by the Association for Welfare of the Handicapped (AWH), AWHEC is dedicated to nurturing future engineers by providing a strong foundation in engineering principles and fostering innovation. Affiliated to the APJ Abdul Kalam Technological University (KTU) and approved by the All India Council for Technical Education (AICTE), AWHEC offers a vibrant learning environment that equips students with the technical skills and practical knowledge needed to thrive in the industry.
+                <br><br>
+                In line with AWHEC's commitment to fostering a culture of innovation, we present ATHMA 24, our annual technical festival. ATHMA serves as a launchpad for budding engineers to showcase their talents and ideas. It's a two-day extravaganza packed with exciting technical events, workshops, guest lectures, and more.  Whether you're a coding whiz, a robotics enthusiast, or a design prodigy, ATHMA 24 offers a platform to challenge yourself, learn from industry experts, and network with fellow engineering minds.
                 <div class="ele-2"></div>
                 <div class="ele-3"></div>
             </div>
@@ -1121,17 +1111,17 @@
         <footer>
             <span>
                 <span id="follow-us-sapn">Follow us on</span>
-                <a href="https://www.facebook.com/bitsapogee/" target="_blank">
+                <a href="https://www.instagram.com/athma_techfest/" target="_blank">
                     <span class="facebook icon"></span>
                 </a>
-                <a href="https://www.instagram.com/bitsapogee/" target="_blank">
+                <a href="https://www.instagram.com/athma_techfest/" target="_blank">
                     <span class="instagram icon"></span>
                 </a>
-                <a href="https://twitter.com/bitsapogee/" target="_blank">
+                <a href="https://www.instagram.com/athma_techfest/" target="_blank">
                     <span class="twitter icon"></span>
                 </a>
             </span>
-            <span>APOGEE, BITS Pilani</span>
+            <span>ATHMA 24, AWHEC</span>
         </footer>
     </div>
 
